--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,147 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.game {
+  display: flex;
+  justify-content: space-between;
+  width: 1400px;
+  flex-wrap: wrap;
+  padding: 5% 20%;
+}
+
+.cardBack {
+  flex-basis: 85%;
+  width: 150px;
+  height: 250px;
+  background-color: #eee;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: flex;
+  justify-content: center;
+}
+
+.deck {
+  flex-basis: 15%;
+  text-align: center;
+}
+
+.app {
+  display: flex;
+  align-items: center;
+}
+
+.m {
+  margin-top: 8px;
+  margin-left: 8px;
+}
+
+.card {
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  position: absolute;
+  width: 150px;
+  height: 250px;
+}
+
+.flipCardInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border-radius: 15%;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.5s 0.8s;
+  transform-style: preserve-3d;
+}
+
+.front {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  flex-direction: column;
+}
+
+.innerCard {
+  padding: 8px;
+}
+
+/* Position the front and back side */
+.front, .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.dead .flipCardInner {
+  transform: rotateY(180deg);
+}
+
+.cardBody {
+  display: flex;
+  padding: 16px;
+  justify-content: center;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
+.red {
+  color: red;
+}
+
+.reverse {
+  width: 100%;
+  transform: rotate(180deg);
+  margin-bottom: 8px;
+  margin-left: -8px;
+}
+
+.stack {
+  flex-basis: 25%;
+  margin: 24px;
+  position: relative;
+  height: 250px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  position: absolute;
+  height:50%;
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0%;
+  width: 100%;
+}
+
+.buttonBottom {
+  bottom: 0;
+}
+
+
+.buttonHover:hover {
+  opacity: 50%;
+  background-color: #eee;
 }
